fixing overflow

--- a/styles.css
+++ b/styles.css
@@ -14,12 +14,13 @@
 }
 * {
 	box-sizing: border-box;
+	max-width: 100vw;
 }
 h5 {
 	letter-spacing: 8px;
 }
 body {
-	overflow-x: hidden;
+	overflow-x: hidden !important;
 	font-family: 'upheaval', monospace;
 	margin: 0;
 	padding: 0;
